[package]
name = "turquoise-attack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
titlecase = "1.1" # Nicer capitalization

# RNG for petname
[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

# Random names that aren't just random characters
[dependencies.petname]
version = "1.1.2"
default-features = false
features = ["default_dictionary"]
